added email service; implement spring security